--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "jspdf": "^1.3.5",
+    "ngx-slideshow": "^0.1.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
@@ -33,6 +35,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jspdf": "^1.1.31",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
