--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
+    "angular-ui-carousel": "^0.1.10",
+    "angular2-materialize": "^15.1.10",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
+    "ngx-drag-scroll": "^1.7.7",
     "ngx-slideshow": "^0.1.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
